--- a/semcore/table/src/style/table.shadow.css
+++ b/semcore/table/src/style/table.shadow.css
@@ -154,6 +154,7 @@ SSortWrapper {
   position: relative;
   flex-basis: 0;
   height: 100%;
+  min-height: 16px;
   opacity: 0;
   transition: all 0.3s ease;
 }
@@ -174,9 +175,8 @@ SSortIcon {
   display: none;
   fill: var(--intergalactic-icon-secondary-neutral-hover-active, #8a8e9b);
   position: absolute;
-  top: calc(1em * 1.25);
+  top: calc(1em * 1.25 - 16px);
   right: 0;
-  transform: translate(0, -50%);
   margin-left: var(--intergalactic-spacing-1x, 4px);
   opacity: 0;
   transition: opacity 0.3s ease;
